src/objects/Case.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <fields>
        <fullName>Case_Issue__c</fullName>
        <label>Case Issue</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Credit_Limit__c</fullName>
        <formula>Account.Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extension_To__c</fullName>
        <label>Credit Extension</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Issue__c</fullName>
        <label>Product Quality Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Return_Reason__c</fullName>
        <label>Product Return Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheme</label>
        <referenceTo>Scheme__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <recordTypes>
        <fullName>Credit_Extension</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Credit Extension</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delayed_Shipments</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Delayed Shipments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goods_Quality</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Goods Quality</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goods_Return</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Goods Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retailer_Scheme_Claim</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Retailer Scheme Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scheme_Claim</fullName>
        <active>true</active>
        <businessProcess>Support Process</businessProcess>
        <label>Scheme Claim</label>
    </recordTypes>
    <validationRules>
        <fullName>Credit_Request_Amount</fullName>
        <active>true</active>
        <description>Requested Credit Amount Should be Greater than Current Credit Amount</description>
        <errorConditionFormula>Extension_To__c&lt;= Current_Credit_Limit__c</errorConditionFormula>
        <errorMessage>Requested Credit Amount Should be Greater than Current Credit Amount</errorMessage>
    </validationRules>
</CustomObject>